Fixed the switch
I fixed the light switch

--- a/JSL_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_JSL11-main/index.css
+++ b/JSL_Portfolio_Piece_StudentNo_Classcode_Group_Name-Surname_JSL11-main/index.css
@@ -882,7 +882,7 @@ input:checked + #label-checkbox-theme:after {
   }
 
   #side-logo-div {
-    display: none;
+    display: block;
   }
 
   .side-bar-bottom {
